<!-- res/values/strings.xml -->
<resources>

    <string name="app_name">The Login App</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>


    <string name="label_remember_me">Remember Me</string>


    <string name="button_login">Login</string>


    <string name="label_forgot_password">Forgot Password?</string>


    <string name="content_desc_email">Email input field</string>
    <string name="content_desc_password">Password input field</string>
    <string name="content_desc_remember_me">Checkbox to remember user login</string>
    <string name="content_desc_login">Login button</string>
    <string name="content_desc_forgot_password">Forgot password link</string>
</resources>
